--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <header>
+    <header class="container">
+        <!-- Navber start  -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container">
               <a class="navbar-brand" href="#">
@@ -35,7 +36,83 @@
               </div>
             </div>
           </nav>
+        <!-- Navber end  -->
+
+
+        <!-- Slider start  -->
+          <section class="mt-5">
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item active border rounded bg-info p-5">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center">
+                                <div>
+                                    <h2>Cool Dude Headphone</h2> 
+                                    <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                                    <h1>$420</h1>
+                                <div class="btn btn-warning">Buy now</div>
+                            </div>
+                        </div>
+                    <div class="col-lg-5">
+                            <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                  </div>
+                    <div class="carousel-item active border rounded bg-info p-5">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center">
+                                <div>
+                                    <h2>Cool Dude Headphone</h2> 
+                                    <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                                    <h1>$420</h1>
+                                <div class="btn btn-warning">Buy now</div>
+                            </div>
+                        </div>
+                    <div class="col-lg-5">
+                            <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                  </div>
+                    <div class="carousel-item active border rounded bg-info p-5">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center">
+                                <div>
+                                    <h2>Cool Dude Headphone</h2> 
+                                    <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                                    <h1>$420</h1>
+                                <div class="btn btn-warning">Buy now</div>
+                            </div>
+                        </div>
+                    <div class="col-lg-5">
+                            <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                  </div>
+
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+          </section>
+        <!-- Slider end  -->
     </header>
+
+
+    <!-- Main section  -->
+
+    <main>
+      
+    </main>
+
+
+
 
 
 
