--- a/index.html
+++ b/index.html
@@ -108,7 +108,33 @@
     <!-- Main section  -->
 
     <main>
-      
+      <!-- catagoris start  -->
+      <section>
+        <div class="container text-center my-5">
+          <div class="row g-2">
+            <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+              <div class="p-3 bg-warning rounded-3 d-flex align-items-center justify-content-around">
+                <h1 class="text-white">Watch</h1>
+                <img src="images/categories/watch.png" alt="">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+              <div class="p-3 bg-success rounded-3 d-flex align-items-center justify-content-around">
+                <h1 class="text-white">Bag</h1>
+                <img src="images/categories/bag.png" alt="">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+              <div class="p-3 bg-primary rounded-3 d-flex align-items-center justify-content-around">
+                <h1 class="text-white">Shoes</h1>
+                <img src="images/categories/shoes.png" alt="">
+              </div>
+            </div>
+           
+          </div>
+        </div>
+      </section>
+      <!-- catagoris end  -->
     </main>
 
 
