bagpack_section_added_

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             <div class="card-body">
               <h5 class="card-title">Supply 350</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">$120</h5>
             </div>
             <div class="m-3">
               <div class="btn btn-warning">Buy now</div>
@@ -160,6 +161,7 @@
             <div class="card-body">
               <h5 class="card-title">Nike 360</h5>
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h5 class="card-title">$320</h5>
             </div>
             <div class="m-3">
               <div class="btn btn-warning">Buy now</div>
@@ -172,6 +174,7 @@
             <div class="card-body">
               <h5 class="card-title">Red Airmax</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <h5 class="card-title">$350</h5>
             </div>
             <div class="m-3">
               <div class="btn btn-warning">Buy now</div>
@@ -182,6 +185,53 @@
     </section>
 
     <!-- Shoes section end  -->
+
+    <!-- Bagpack section start   -->
+    <section class="container my-5"> 
+      <h2>Shoes</h2>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="col">
+          <div class="card border border-0 shadow-lg h-100">
+            <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red Laltu Bag</h5>
+              <h5 class="card-title">$120</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="m-3">
+              <div class="btn btn-warning">Buy now</div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card border border-0 shadow-lg h-100">
+            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Blue Niltu Bag</h5>
+              <h5 class="card-title">$320</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div class="m-3">
+              <div class="btn btn-warning">Buy now</div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card border border-0 shadow-lg h-100">
+            <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Black Kaltu Bag</h5>
+              <h5 class="card-title">$350</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+            <div class="m-3">
+              <div class="btn btn-warning">Buy now</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Bagpack section start   -->
 
 
 
