subscribe_section_added

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#Shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#Bagpack">Bagpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#Subscribe">Subscribe</a>
                   </li>
 
                 </ul>
@@ -135,11 +135,10 @@
         </div>
       </section>
       <!-- catagoris end  -->
-    </main>
 
-    <!-- Shoes section start  -->
+          <!-- Shoes section start  -->
 
-    <section class="container my-5"> 
+    <section class="container my-5 id" id="Shoes"> 
       <h2>Shoes</h2>
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <div class="col">
@@ -187,8 +186,8 @@
     <!-- Shoes section end  -->
 
     <!-- Bagpack section start   -->
-    <section class="container my-5"> 
-      <h2>Shoes</h2>
+    <section class="container my-5" id="Bagpack"> 
+      <h2>Bagpack</h2>
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <div class="col">
           <div class="card border border-0 shadow-lg h-100">
@@ -231,7 +230,28 @@
         </div>
       </div>
     </section>
-    <!-- Bagpack section start   -->
+    <!-- Bagpack section end   -->
+
+    <!-- subscribe section start -->
+    <section style="height: 350px;" class="container rounded-3 d-flex justify-content-center align-items-center bg-info" id="Subscribe">
+      <div>
+        <h2>LET'S STAY IN TOUCH</h2>
+        <p>Get updates on sales, specials and more</p>
+        <form>
+          <div class="mb-1">
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+    </section>
+    <!-- subscribe section end  -->
+
+    </main>
+
+    <footer class="mt-5 text-center">
+      <p><small>©2024. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+    </footer>
 
 
 
