--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     </main>
 
     <footer class="mt-5 text-center">
-      <p><small>©2024. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+      <p><small>©2024. Panda Commerce. All rights reserved. Sourov, Bangladesh.</small></p>
     </footer>
 
 
