--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda commerce</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
+    <!-- custom css  -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="container">
         <!-- Navber start  -->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg fixed-top bg-light">
             <div class="container">
               <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="Bootstrap">
@@ -43,14 +46,14 @@
           <section class="mt-5">
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
-                    <div class="carousel-item active border rounded bg-info p-5">
+                    <div class="carousel-item active border rounded panda-bg-info p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
                                     <h2>Cool Dude Headphone</h2> 
                                     <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                                     <h1>$420</h1>
-                                <div class="btn btn-warning">Buy now</div>
+                                <div class="btn panda-btn-buy-now">Buy now</div>
                             </div>
                         </div>
                     <div class="col-lg-5">
@@ -58,14 +61,14 @@
                         </div>
                     </div>
                   </div>
-                    <div class="carousel-item active border rounded bg-info p-5">
+                    <div class="carousel-item active border rounded panda-bg-info p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
                                     <h2>Cool Dude Headphone</h2> 
                                     <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                                     <h1>$420</h1>
-                                <div class="btn btn-warning">Buy now</div>
+                                <div class="btn panda-btn-buy-now">Buy now</div>
                             </div>
                         </div>
                     <div class="col-lg-5">
@@ -73,14 +76,14 @@
                         </div>
                     </div>
                   </div>
-                    <div class="carousel-item active border rounded bg-info p-5">
+                    <div class="carousel-item active border rounded panda-bg-info p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
                                     <h2>Cool Dude Headphone</h2> 
                                     <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                                     <h1>$420</h1>
-                                <div class="btn btn-warning">Buy now</div>
+                                <div class="btn panda-btn-buy-now">Buy now</div>
                             </div>
                         </div>
                     <div class="col-lg-5">
@@ -111,7 +114,7 @@
       <!-- catagoris start  -->
       <section>
         <div class="container text-center my-5">
-          <div class="row g-2">
+          <div class="row g-4 catagoris">
             <div class="col-lg-4 col-md-6 col-sm-12 col-12">
               <div class="p-3 bg-warning rounded-3 d-flex align-items-center justify-content-around">
                 <h1 class="text-white">Watch</h1>
@@ -150,7 +153,7 @@
               <h5 class="card-title">$120</h5>
             </div>
             <div class="m-3">
-              <div class="btn btn-warning">Buy now</div>
+              <div class="btn panda-btn-buy-now">Buy now</div>
             </div>
           </div>
         </div>
@@ -163,7 +166,7 @@
               <h5 class="card-title">$320</h5>
             </div>
             <div class="m-3">
-              <div class="btn btn-warning">Buy now</div>
+              <div class="btn panda-btn-buy-now">Buy now</div>
             </div>
           </div>
         </div>
@@ -176,7 +179,7 @@
               <h5 class="card-title">$350</h5>
             </div>
             <div class="m-3">
-              <div class="btn btn-warning">Buy now</div>
+              <div class="btn panda-btn-buy-now">Buy now</div>
             </div>
           </div>
         </div>
@@ -198,7 +201,7 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
             <div class="m-3">
-              <div class="btn btn-warning">Buy now</div>
+              <div class="btn panda-btn-buy-now">Buy now</div>
             </div>
           </div>
         </div>
@@ -211,7 +214,7 @@
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             </div>
             <div class="m-3">
-              <div class="btn btn-warning">Buy now</div>
+              <div class="btn panda-btn-buy-now">Buy now</div>
             </div>
           </div>
         </div>
@@ -224,7 +227,7 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
             </div>
             <div class="m-3">
-              <div class="btn btn-warning">Buy now</div>
+              <div class="btn panda-btn-buy-now">Buy now</div>
             </div>
           </div>
         </div>
@@ -233,7 +236,7 @@
     <!-- Bagpack section end   -->
 
     <!-- subscribe section start -->
-    <section style="height: 350px;" class="container rounded-3 d-flex justify-content-center align-items-center bg-info" id="Subscribe">
+    <section style="height: 350px;" class="container rounded-3 d-flex justify-content-center align-items-center panda-bg-info" id="Subscribe">
       <div>
         <h2>LET'S STAY IN TOUCH</h2>
         <p>Get updates on sales, specials and more</p>
@@ -241,7 +244,7 @@
           <div class="mb-1">
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn panda-btn-buy-now">Submit</button>
         </form>
       </div>
     </section>
