--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     </main>
 
     <footer class="mt-5 text-center">
-      <p><small>©2024. Panda Commerce. All rights reserved. Sourov, Bangladesh.</small></p>
+      <p><small>©2024. Panda Commerce. All rights reserved. Sourov Biswas, Bangladesh.</small></p>
     </footer>
 
 
